# KamTube.py

./: .gitignore  EXAMPLE.md  KamTube.py  LICENSE  README.md  __main__.py  main.py  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  questions.md
.github/ISSUE_TEMPLATE/workflows/: publish.yaml
KamTube/: __init__.py  cli.py  exceptions.py  kamtube.py  parsers.py  regex_test.py  util.py
kamtubepy/: KamExceptions.py  KamTube.py  cli.py
src/: KamTube.py  __init__.py
src/KamTube.egg-info/: PKG-INFO  SOURCES.txt
src/kamtubepy/: KamTube.py  __init__.py
