[metadata]
name=KamTube
version=0.0.4
description="An ICQ async bot framework"
long_description= file: README.md
long_description_content_type=text/markdown
author=Kamuri Amorim
author_email=luiz.k.amorim@gmail.com
url=https://github.com/kamuridesu/KamTube
keywords=invidious download youtube python cli
license=MIT
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
[options]
packages =
    KamTube
install_requires =
    aiohttp
    beautifulsoup4
[options.entry_points]
console_scripts =
    kamtube = KamTube.cli:main